test: update tests for PhoneServiceImpl